<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginScreen"
    android:orientation="vertical"
    android:background="@color/loginScreenBackground">
    <ImageView
        android:id="@+id/imageview_logo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/loginscreen_logo"
        android:layout_margin="20dp">
    </ImageView>
    <TextView
        android:id="@+id/textView_loginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/LoginScreen_loginTitle"
        android:textColor="@color/loginScreen_heaerColor"
        android:textSize="50sp"
        android:fontFamily="@font/baloo_bhai">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputLayout_UserName_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LoginScreen_textInputlayout_UserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputLayout_Password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/LoginScreen_textInputlayout_Password"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_forgotPassword_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginScreen_button_text_ForgetPassWord"
            android:background="@color/loginScreen_Button_forgetPassword"
            android:textAllCaps="false"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:textSize="10sp">
        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/loginScreen_ButtonLogin"
            android:text="@string/LoginScreen_button_text_LoginButton"
            android:textColor="@color/loginScreen_ButtonLogin_textColor"
            android:textAllCaps="false">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
</LinearLayout>